fix: scope all CSS custom element selectors under .xq-wrap to eliminate unknown type selector warnings

--- a/src/style/base.css
+++ b/src/style/base.css
@@ -14,7 +14,7 @@
   box-shadow: 0 0 0 3px var(--piece-black, #44c);
 }
 
-xq-container {
+.xq-wrap xq-container {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -26,7 +26,7 @@ xq-container {
   margin: auto;
 }
 
-xq-board {
+.xq-wrap xq-board {
   position: absolute;
   top: 0;
   left: 0;
@@ -44,7 +44,7 @@ xq-board {
   cursor: pointer;
 }
 
-xq-board square {
+.xq-wrap xq-board square {
   position: absolute;
   top: 0;
   left: 0;
@@ -53,12 +53,12 @@ xq-board square {
   pointer-events: none;
 }
 
-xq-board square.move-dest {
+.xq-wrap xq-board square.move-dest {
   pointer-events: auto;
 }
 
-xq-board square.last-move-orig,
-xq-board square.last-move-dest {
+.xq-wrap xq-board square.last-move-orig,
+.xq-wrap xq-board square.last-move-dest {
   will-change: transform;
 }
 
@@ -74,17 +74,17 @@ xq-board square.last-move-dest {
   pointer-events: none;
 }
 
-xq-board piece.dragging {
+.xq-wrap xq-board piece.dragging {
   cursor: move;
   /* !important to override z-index from 3D piece inline style */
   z-index: 11 !important;
 }
 
-piece.anim {
+.xq-wrap piece.anim {
   z-index: 8;
 }
 
-piece.fading {
+.xq-wrap piece.fading {
   z-index: 1;
   opacity: 0.5;
 }
@@ -182,7 +182,7 @@ piece.fading {
 }
 
 /* Interactive board square colors */
-xq-board square.move-dest {
+.xq-wrap xq-board square.move-dest {
   background: radial-gradient(
     rgba(20, 85, 30, 0.5) 22%,
     #208530 0,
@@ -191,7 +191,7 @@ xq-board square.move-dest {
   );
 }
 
-xq-board square.premove-dest {
+.xq-wrap xq-board square.premove-dest {
   background: radial-gradient(
     rgba(20, 30, 85, 0.5) 22%,
     #203085 0,
@@ -200,7 +200,7 @@ xq-board square.premove-dest {
   );
 }
 
-xq-board square.oc.move-dest {
+.xq-wrap xq-board square.oc.move-dest {
   background: radial-gradient(
     transparent 0%,
     transparent 75%,
@@ -208,7 +208,7 @@ xq-board square.oc.move-dest {
   );
 }
 
-xq-board square.oc.premove-dest {
+.xq-wrap xq-board square.oc.premove-dest {
   background: radial-gradient(
     transparent 0%,
     transparent 80%,
@@ -216,17 +216,17 @@ xq-board square.oc.premove-dest {
   );
 }
 
-xq-board square.move-dest:hover,
-xq-board square.move-dest.hover {
+.xq-wrap xq-board square.move-dest:hover,
+.xq-wrap xq-board square.move-dest.hover {
   background: rgba(20, 85, 30, 0.3);
 }
 
-xq-board square.premove-dest:hover,
-xq-board square.premove-dest.hover {
+.xq-wrap xq-board square.premove-dest:hover,
+.xq-wrap xq-board square.premove-dest.hover {
   background: rgba(20, 30, 85, 0.2);
 }
 
-.turn-red xq-board square.last-move-orig {
+.xq-wrap.turn-red xq-board square.last-move-orig {
   background: linear-gradient(
       var(--piece-black, #44c),
       var(--piece-black, #44c)
@@ -234,12 +234,12 @@ xq-board square.premove-dest.hover {
     center / 30% 30% no-repeat;
 }
 
-.turn-black xq-board square.last-move-orig {
+.xq-wrap.turn-black xq-board square.last-move-orig {
   background: linear-gradient(var(--piece-red, #c44), var(--piece-red, #c44))
     center / 30% 30% no-repeat;
 }
 
-.turn-red xq-board square.last-move-dest {
+.xq-wrap.turn-red xq-board square.last-move-dest {
   /* background-color: rgba(20, 85, 30, 0.5); */
   background: radial-gradient(
     transparent 0%,
@@ -248,7 +248,7 @@ xq-board square.premove-dest.hover {
   );
 }
 
-.turn-black xq-board square.last-move-dest {
+.xq-wrap.turn-black xq-board square.last-move-dest {
   /* background-color: rgba(20, 85, 30, 0.5); */
   background: radial-gradient(
     transparent 0%,
@@ -257,7 +257,7 @@ xq-board square.premove-dest.hover {
   );
 }
 
-xq-board square.selected {
+.xq-wrap xq-board square.selected {
   /* background-color: rgba(20, 85, 30, 0.5); */
   background: radial-gradient(
     transparent 0%,
@@ -266,7 +266,7 @@ xq-board square.selected {
   );
 }
 
-xq-board square.check {
+.xq-wrap xq-board square.check {
   background: radial-gradient(
     ellipse at center,
     rgba(255, 0, 0, 1) 0%,
@@ -276,17 +276,17 @@ xq-board square.check {
   );
 }
 
-xq-board square.current-premove {
+.xq-wrap xq-board square.current-premove {
   background-color: rgba(20, 30, 85, 0.5);
 }
 
 /* Alternating colors in file coordinate labels */
-.orientation-white .files :nth-child(even),
-.orientation-black .files :nth-child(odd) {
+.xq-wrap .orientation-white .files :nth-child(even),
+.xq-wrap .orientation-black .files :nth-child(odd) {
   color: rgba(72, 72, 72, 0.8);
 }
 
-.orientation-white .files :nth-child(odd),
-.orientation-black .files :nth-child(even) {
+.xq-wrap .orientation-white .files :nth-child(odd),
+.xq-wrap .orientation-black .files :nth-child(even) {
   color: rgba(255, 255, 255, 0.8);
 }
